# lore-src

./: .gitignore  Cargo.toml  README.md
defaults/: config.toml  schema.toml
defaults/skills/project-init/: SKILL.md
defaults/skills/session-knowledge-update/: SKILL.md
src/: config.rs  configure.rs  git.rs  init.rs  main.rs  markdown.rs  resolver.rs  scaffold.rs  suggestions.rs  utils.rs  xml.rs
src/cli/: commands.rs  mod.rs
src/graph/: mod.rs  schema.rs  store.rs  types.rs  validation.rs
src/knowledge/: manifest.rs  mod.rs  store.rs
src/skills/: frontmatter.rs  mod.rs  store.rs  types.rs
src/tests/: graph_tests.rs  knowledge_tests.rs  mod.rs  skill_tests.rs
src/tools/: graph.rs  knowledge.rs  mod.rs  skills.rs
