[package]
name = "lore"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde_yaml = "0.9"
rayon = "1"
dirs = "6"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"